fixe html scroll to eliminate two x scrollbars

--- a/app/css/globals.scss
+++ b/app/css/globals.scss
@@ -33,6 +33,10 @@
 @import "_variables.scss";
 @import "fullpage.css";
 
+html {
+  overflow: hidden;
+}
+
 html,
 body {
   width: 100%;
