--- a/app/css/modules/_home.scss
+++ b/app/css/modules/_home.scss
@@ -1,9 +1,10 @@
 .Home {
   height: 100vh; /* Full viewport height for each pane */
-  width: 100vw;
+  width: 100%;
   scroll-snap-type: y mandatory; /* Enable vertical snapping */
   overflow-y: scroll; /* Allow scrolling within the container */
   scroll-behavior: smooth; /* Enable smooth scrolling behavior */
+  overflow-x: hidden;
 
   .HeroPane {
     height: 100vh; /* Each pane takes full viewport height */
@@ -21,9 +22,9 @@
   }
 
   .see-more-work {
-    height: 75vh; /* Each pane takes full viewport height */
+    height: 75vh;
     width: 100%;
-    scroll-snap-align: center; /* Snap panes to the start of the viewport */
+    scroll-snap-align: center; /* Snap panes to the center of the viewport */
     scroll-margin: 0;
     display: flex;
     align-items: center;
