--- a/app/css/modules/_spinner.scss
+++ b/app/css/modules/_spinner.scss
@@ -2,6 +2,7 @@
   position: relative;
   overflow: hidden;
   transform-origin: 50% 100%;
+  transform: translateY(50%) translateX(-40%) !important;
 }
 
 .spinner-circle,
